--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Configure AWS credentials for Yandex
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_SECOND }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_SECOND }}
           aws-region: ru-central1
 
       - name: Deploy to Yandex Object Storage
